cmake_minimum_required(VERSION 3.13)
project(linked_ptr)

set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -fsanitize=address -fno-omit-frame-pointer")
set(LSAN_OPTIONS=verbosity=1:log_threads=1)

add_executable(test test.cpp)
add_executable(smoke smoke_test.cpp)
add_executable(smoke_gen gen_smoke_test.cpp)
add_executable(RASDN run_assign_self_derived_nempty.cpp)
add_executable(RSA1 run_swap_adjacent1.cpp)
add_executable(CADC comp_assign_derived_const.cpp)
add_executable(CCEC2 comp_cmp_eq_const2.cpp)
add_executable(CCECDT2 comp_cmp_eq_const_diff_types2.cpp)
add_executable(CCLC3 comp_cmp_less_const3.cpp)
add_executable(CCNULL comp_ctor_NULL.cpp)
add_executable(NIT1 ncomp_incomplete_type1.cpp)
add_executable(RG021 run_gen_021_8x9_4113x4861_397x815_4x4_3x4_5x5_4x4_C4F2B4F7.cpp)
add_executable(RG055 run_gen_055_15x26_28180541x35357669_1448194617849_DF45FC8F.cpp)

#add_custom_target(TEST)
#add_dependencies(TEST smoke smoke_gen RASDN RSA1 CADC)
